--- a/model/pom.xml
+++ b/model/pom.xml
@@ -11,12 +11,19 @@
 
     <artifactId>model</artifactId>
 
-    <dependencies>
 
+
+
+    <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+<!--        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!--JSON-->
         <dependency>
