--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -12,23 +12,38 @@
     <artifactId>repository</artifactId>
 
     <dependencies>
+
+
         <dependency>
             <groupId>com.mrigor.tasks</groupId>
             <artifactId>model</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>runtime</scope>
+            <version>2.3.4</version>
+        </dependency>
+
         <dependency>
             <groupId>com.mrigor.tasks</groupId>
             <artifactId>test-util</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!--Spring-->
+<!--        &lt;!&ndash;Spring&ndash;&gt;
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
         </dependency>
 
-        <!--DataBase-->
+        &lt;!&ndash;DataBase&ndash;&gt;
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
@@ -36,7 +51,7 @@
 
 
 
-        <!-- Logging with SLF4J & LogBack -->
+        &lt;!&ndash; Logging with SLF4J & LogBack &ndash;&gt;
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -51,6 +66,17 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
     </dependencies>
+
+
+<!--    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>-->
+
 </project>
