--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -27,9 +27,9 @@
                         <apiSource>
                             <springmvc>true</springmvc>
                             <locations>
-                                     <location>
-                                com.mrigor.tasks.department.rest
-                                     </location>
+                                <location>
+                                    com.mrigor.tasks.department.rest
+                                </location>
                             </locations>
 
                             <info>
@@ -50,7 +50,7 @@
                                 </license>
                             </info>
 
-                            <swaggerDirectory>${basedir}/swagger-ui/ </swaggerDirectory>
+                            <swaggerDirectory>${basedir}/swagger-ui/</swaggerDirectory>
                         </apiSource>
                     </apiSources>
                 </configuration>
@@ -84,55 +84,60 @@
                 </executions>
             </plugin>
 
-                        <plugin>
-                            <groupId>org.asciidoctor</groupId>
-                            <artifactId>asciidoctor-maven-plugin</artifactId>
-                            <version>1.5.2</version>
-                            <executions>
-                                <execution>
-                                    <id>output-html</id>
-                                    <phase>test</phase>
-                                    <goals>
-                                        <goal>process-asciidoc</goal>
-                                    </goals>
-                                    <configuration>
-                                        <backend>html5</backend>
-                                        <outputDirectory>${basedir}/docs/html/</outputDirectory>
-                                    </configuration>
-                                </execution>
-                                <execution>
-                                    <id>output-pdf</id>
-                                    <phase>test</phase>
-                                    <goals>
-                                        <goal>process-asciidoc</goal>
-                                    </goals>
-                                    <configuration>
-                                        <backend>pdf</backend>
-                                        <outputDirectory>${basedir}/docs/pdf/</outputDirectory>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>org.asciidoctor</groupId>
-                                    <artifactId>asciidoctorj-pdf</artifactId>
-                                    <version>1.5.0-alpha.8</version>
-                                </dependency>
-                            </dependencies>
-                            <configuration>
-                                <sourceDirectory>asciidoc</sourceDirectory>
-                                <sourceDocumentName>index.adoc</sourceDocumentName>
-                                <attributes>
-                                    <doctype>book</doctype>
-                                    <toc>left</toc>
-                                    <toclevels>2</toclevels>
-                                    <generated>src/main/webapp/asciidoc</generated>
-                                </attributes>
-                            </configuration>
-                        </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.2</version>
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html5</backend>
+                            <outputDirectory>${basedir}/docs/html/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>output-pdf</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>pdf</backend>
+                            <outputDirectory>${basedir}/docs/pdf/</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.0-alpha.8</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sourceDirectory>asciidoc</sourceDirectory>
+                    <sourceDocumentName>index.adoc</sourceDocumentName>
+                    <attributes>
+                        <doctype>book</doctype>
+                        <toc>left</toc>
+                        <toclevels>2</toclevels>
+                        <generated>src/main/webapp/asciidoc</generated>
+                    </attributes>
+                </configuration>
+            </plugin>
 
 
-        </plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+
     </build>
 
 
@@ -172,7 +177,22 @@
         </dependency>
 
 
-        <!--Spring-->
+<!--        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+<!--        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>runtime</scope>
+        </dependency>-->
+
+<!--        &lt;!&ndash;Spring&ndash;&gt;
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -189,7 +209,7 @@
         </dependency>
 
 
-        <!--Web-->
+        &lt;!&ndash;Web&ndash;&gt;
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
@@ -197,22 +217,22 @@
         </dependency>
 
 
-        <!-- Logging with SLF4J & LogBack -->
+        &lt;!&ndash; Logging with SLF4J & LogBack &ndash;&gt;
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <!--        <scope>compile</scope>-->
+            &lt;!&ndash;        <scope>compile</scope>&ndash;&gt;
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <!--        <scope>runtime</scope>-->
+            &lt;!&ndash;        <scope>runtime</scope>&ndash;&gt;
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <!--        <scope>runtime</scope>-->
-        </dependency>
+            &lt;!&ndash;        <scope>runtime</scope>&ndash;&gt;
+        </dependency>-->
 
     </dependencies>
 
