--- a/server-web/src/main/resources/application.properties
+++ b/server-web/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.mvc.view.prefix: /WEB-INF/jsp/
-spring.mvc.view.suffix: .jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
 server.port=8081
+rest.port=8080
+rest.host=localhost
