--- a/server-rest/src/main/resources/application.properties
+++ b/server-rest/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.datasource.url = jdbc:hsqldb:hsql://${DATABASE_HOST}/db
-#spring.datasource.url = jdbc:hsqldb:hsql://localhost/db
+spring.datasource.url = jdbc:hsqldb:hsql://localhost/db
 #spring.datasource.url = jdbc:hsqldb:file:db
-spring.datasource.url=jdbc:hsqldb:mem:db
+#spring.datasource.url=jdbc:hsqldb:mem:db
 spring.datasource.username= sa
 spring.datasource.password=
