docker fix overriding properies (rest.<>)

--- a/server-web/src/main/resources/application.properties
+++ b/server-web/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 server.port=8081
-rest.port=8080
-rest.host=localhost
+myrest.port=8080
+myrest.host=localhost
