--- a/server-web/src/test/resources/application.properties
+++ b/server-web/src/test/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url = jdbc:hsqldb:mem:db
 spring.datasource.username= sa
 spring.datasource.password=
 
-rest.port=8080
-rest.host=localhost
+myrest.port=8080
+myrest.host=localhost
