--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
-    <artifactId>repository</artifactId>
+
+    <artifactId>dao</artifactId>
+
 
     <dependencies>
         <dependency>
@@ -73,4 +74,5 @@
             <scope>runtime</scope>
         </dependency>
     </dependencies>
+
 </project>
