--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -144,7 +144,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>repository</artifactId>
+            <artifactId>dao</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
