--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -32,21 +32,21 @@
 
 
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>RELEASE</version>
-        </dependency>
+        </dependency>-->
 
 
-        <dependency>
+<!--        <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>jta</artifactId>
             <version>1.1</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>RELEASE</version>
@@ -55,7 +55,7 @@
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
             <version>2.2.5</version>
-        </dependency>
+        </dependency>-->
 
         <!--Spring-->
         <dependency>
@@ -66,8 +66,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-
-
         </dependency>
 
 
