--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -27,9 +27,9 @@
                         <apiSource>
                             <springmvc>true</springmvc>
                             <locations>
-                                     <location>
-                                com.mrigor.tasks.department.rest
-                                     </location>
+                                <location>
+                                    com.mrigor.tasks.department.rest
+                                </location>
                             </locations>
 
                             <info>
@@ -50,7 +50,7 @@
                                 </license>
                             </info>
 
-                            <swaggerDirectory>${basedir}/swagger-ui/ </swaggerDirectory>
+                            <swaggerDirectory>${basedir}/swagger-ui/</swaggerDirectory>
                         </apiSource>
                     </apiSources>
                 </configuration>
@@ -84,52 +84,52 @@
                 </executions>
             </plugin>
 
-                        <plugin>
-                            <groupId>org.asciidoctor</groupId>
-                            <artifactId>asciidoctor-maven-plugin</artifactId>
-                            <version>1.5.2</version>
-                            <executions>
-                                <execution>
-                                    <id>output-html</id>
-                                    <phase>test</phase>
-                                    <goals>
-                                        <goal>process-asciidoc</goal>
-                                    </goals>
-                                    <configuration>
-                                        <backend>html5</backend>
-                                        <outputDirectory>${basedir}/docs/html/</outputDirectory>
-                                    </configuration>
-                                </execution>
-                                <execution>
-                                    <id>output-pdf</id>
-                                    <phase>test</phase>
-                                    <goals>
-                                        <goal>process-asciidoc</goal>
-                                    </goals>
-                                    <configuration>
-                                        <backend>pdf</backend>
-                                        <outputDirectory>${basedir}/docs/pdf/</outputDirectory>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>org.asciidoctor</groupId>
-                                    <artifactId>asciidoctorj-pdf</artifactId>
-                                    <version>1.5.0-alpha.8</version>
-                                </dependency>
-                            </dependencies>
-                            <configuration>
-                                <sourceDirectory>asciidoc</sourceDirectory>
-                                <sourceDocumentName>index.adoc</sourceDocumentName>
-                                <attributes>
-                                    <doctype>book</doctype>
-                                    <toc>left</toc>
-                                    <toclevels>2</toclevels>
-                                    <generated>src/main/webapp/asciidoc</generated>
-                                </attributes>
-                            </configuration>
-                        </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.2</version>
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html5</backend>
+                            <outputDirectory>${basedir}/docs/html/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>output-pdf</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>pdf</backend>
+                            <outputDirectory>${basedir}/docs/pdf/</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.0-alpha.8</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sourceDirectory>asciidoc</sourceDirectory>
+                    <sourceDocumentName>index.adoc</sourceDocumentName>
+                    <attributes>
+                        <doctype>book</doctype>
+                        <toc>left</toc>
+                        <toclevels>2</toclevels>
+                        <generated>src/main/webapp/asciidoc</generated>
+                    </attributes>
+                </configuration>
+            </plugin>
 
 
         </plugins>
@@ -188,6 +188,12 @@
             </exclusions>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
 
         <!--Web-->
         <dependency>
