--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -196,6 +196,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>8.5.11</version>
+        </dependency>
+
 
         <!-- Logging with SLF4J & LogBack -->
         <dependency>
