--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -12,11 +12,12 @@
     <artifactId>server-rest</artifactId>
     <packaging>war</packaging>
 
+<!--
 
     <build>
         <plugins>
 
-            <!--  plugins for auto generating documentation            -->
+            &lt;!&ndash;  plugins for auto generating documentation            &ndash;&gt;
             <plugin>
                 <groupId>com.github.kongchen</groupId>
                 <artifactId>swagger-maven-plugin</artifactId>
@@ -27,9 +28,9 @@
                         <apiSource>
                             <springmvc>true</springmvc>
                             <locations>
-                                     <location>
-                                com.mrigor.tasks.department.rest
-                                     </location>
+                                <location>
+                                    com.mrigor.tasks.department.rest
+                                </location>
                             </locations>
 
                             <info>
@@ -50,7 +51,7 @@
                                 </license>
                             </info>
 
-                            <swaggerDirectory>${basedir}/swagger-ui/ </swaggerDirectory>
+                            <swaggerDirectory>${basedir}/swagger-ui/</swaggerDirectory>
                         </apiSource>
                     </apiSources>
                 </configuration>
@@ -84,57 +85,58 @@
                 </executions>
             </plugin>
 
-                        <plugin>
-                            <groupId>org.asciidoctor</groupId>
-                            <artifactId>asciidoctor-maven-plugin</artifactId>
-                            <version>1.5.2</version>
-                            <executions>
-                                <execution>
-                                    <id>output-html</id>
-                                    <phase>test</phase>
-                                    <goals>
-                                        <goal>process-asciidoc</goal>
-                                    </goals>
-                                    <configuration>
-                                        <backend>html5</backend>
-                                        <outputDirectory>${basedir}/docs/html/</outputDirectory>
-                                    </configuration>
-                                </execution>
-                                <execution>
-                                    <id>output-pdf</id>
-                                    <phase>test</phase>
-                                    <goals>
-                                        <goal>process-asciidoc</goal>
-                                    </goals>
-                                    <configuration>
-                                        <backend>pdf</backend>
-                                        <outputDirectory>${basedir}/docs/pdf/</outputDirectory>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>org.asciidoctor</groupId>
-                                    <artifactId>asciidoctorj-pdf</artifactId>
-                                    <version>1.5.0-alpha.8</version>
-                                </dependency>
-                            </dependencies>
-                            <configuration>
-                                <sourceDirectory>asciidoc</sourceDirectory>
-                                <sourceDocumentName>index.adoc</sourceDocumentName>
-                                <attributes>
-                                    <doctype>book</doctype>
-                                    <toc>left</toc>
-                                    <toclevels>2</toclevels>
-                                    <generated>src/main/webapp/asciidoc</generated>
-                                </attributes>
-                            </configuration>
-                        </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.2</version>
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html5</backend>
+                            <outputDirectory>${basedir}/docs/html/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>output-pdf</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>pdf</backend>
+                            <outputDirectory>${basedir}/docs/pdf/</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.0-alpha.8</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sourceDirectory>asciidoc</sourceDirectory>
+                    <sourceDocumentName>index.adoc</sourceDocumentName>
+                    <attributes>
+                        <doctype>book</doctype>
+                        <toc>left</toc>
+                        <toclevels>2</toclevels>
+                        <generated>src/main/webapp/asciidoc</generated>
+                    </attributes>
+                </configuration>
+            </plugin>
 
 
         </plugins>
     </build>
 
+-->
 
     <dependencies>
 
@@ -220,6 +222,27 @@
             <!--        <scope>runtime</scope>-->
         </dependency>
 
+
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-spring</artifactId>
+            <version>1.2.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
