--- a/test-util/pom.xml
+++ b/test-util/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.tomcat</groupId>
