--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -214,6 +214,12 @@
             <!--        <scope>runtime</scope>-->
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
     </dependencies>
 
 
