--- a/server-rest/src/main/resources/application.properties
+++ b/server-rest/src/main/resources/application.properties
@@ -4,3 +4,5 @@
 spring.datasource.url=jdbc:hsqldb:mem:db
 spring.datasource.username= sa
 spring.datasource.password=
+
+endpoints.cors.allowed-origins=*
